# explicit-interface

./: .gitignore  README.md  justfile  pyproject.toml
src/explicit_interface/: __init__.py  _explicit.py  explicit.py
tests/: test_interface.py
