[project]
name = "explicit-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tamir Bahar", email = "tamir.bahar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
explicit-interface = "explicit_interface:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "rich>=14.1.0",

]
